@@ -15,9 +15,7 @@
 
 // ============================================================================
 
-// #define F_CPU 1000000UL
-// NOTE: The F_CPU (CPU frequency) should not be defined in the source code.
-//       It should be defined in either (1) Makefile; or (2) in the IDE. 
+// NOTE: About F_CPU (CPU frequency), it should be defined in either (1) Makefile; or (2) in the IDE.
 
 #include <stdint.h>
 #include <avr/io.h>
@@ -69,15 +67,18 @@ int main(void) {
 #error "CPU frequency should be either 1 MHz or 8 MHz"
 #endif
 
+#define STEPS_DELAY_SHORT 200
+#define STEPS_DELAY 400
+#define STEPS_DELAY_LONG 2000
+
 	// Small delay is necessary if ssd1306_init is the first operation in the application.
 	_delay_ms(40);
 	ssd1306_init();
 
 	// ---- Main Loop ----
-
 	for (;;) {
 		
-		ssd1306_clear(); _delay_ms(200);
+		ssd1306_clear(); _delay_ms(STEPS_DELAY_SHORT);
 
 		// ---- Fill out screen with stripes ----
 		uint8_t p = 0xff;
@@ -85,13 +86,14 @@ int main(void) {
 			p = (p >> 1);
 			ssd1306_fill(~p);
 		}
-		_delay_ms(400);
+		_delay_ms(STEPS_DELAY);
 
 		// ---- Fill out screen with patters ----
-		ssd1306_fill(0xAA); _delay_ms(400);
-		ssd1306_fill2(0x55, 0xAA); _delay_ms(400);
-		ssd1306_fill4(0xCC, 0xCC, 0x33, 0x33); _delay_ms(400);
-		_delay_ms(1000);
+		ssd1306_fill(0xAA); _delay_ms(STEPS_DELAY);	// Horizontal lines
+		ssd1306_fill2(0XFF, 0x00); _delay_ms(STEPS_DELAY);	// Vertical lines
+		ssd1306_fill2(0x55, 0xAA); _delay_ms(STEPS_DELAY);
+		ssd1306_fill4(0xCC, 0xCC, 0x33, 0x33); _delay_ms(STEPS_DELAY);
+		_delay_ms(STEPS_DELAY_LONG);
 
 		// ---- Print some small numbers on the screen ----
 		uint16_t n1 = 0;
@@ -102,7 +104,7 @@ int main(void) {
 				ssd1306_string(" ");
 			}
 		}
-		_delay_ms(1000);
+		_delay_ms(STEPS_DELAY_LONG);
 		
 		// ---- Print some large numbers on the screen ----
 		ssd1306_fill2(0xAA, 0x55);	// Fill screen
@@ -115,10 +117,10 @@ int main(void) {
 				n2 += 567;
 			}
 		}
-		_delay_ms(1000);
+		_delay_ms(STEPS_DELAY_LONG);
 		
 		// ---- Print some variables on the screen ----
-		ssd1306_fill4(0xC0, 0x030, 0x0C, 0x03); _delay_ms(400);
+		ssd1306_fill4(0xC0, 0x030, 0x0C, 0x03); _delay_ms(STEPS_DELAY);
 		uint16_t n3 = 0;
 		for (uint8_t i = 0; i < 163; i++) {
 			ssd1306_setpos(44, 3);
@@ -129,24 +131,24 @@ int main(void) {
 			ssd1306_numdecp(0xffff - n3);
 			n3 += (n3 * 3) / 33 + 1;
 		}
-		_delay_ms(1000);
+		_delay_ms(STEPS_DELAY_LONG);
 
 		// ---- Print some small and large text on the screen ----
-		ssd1306_clear(); _delay_ms(200);
+		ssd1306_clear(); _delay_ms(STEPS_DELAY_SHORT);
 		ssd1306_setpos(34, 0);	ssd1306_string_font6x8("This is the");
 		ssd1306_string_font8x16xy(10, 1, "Tinusaur");
 		ssd1306_setpos(80, 2);	ssd1306_string_font6x8("project");
 		ssd1306_setpos(0, 4);	ssd1306_string_font6x8("The quick start       platform for your    next awesome project");
 		ssd1306_setpos(8, 7);	ssd1306_string_font6x8("http://tinusaur.org");
-		_delay_ms(6000);
+		_delay_ms(STEPS_DELAY_LONG); _delay_ms(STEPS_DELAY_LONG);
 		
 		// ---- Draw bitmap on the screen ----
 		ssd1306_draw_bmp(0,0,128,8, img1_128x64c1);
-		_delay_ms(4000);
+		_delay_ms(STEPS_DELAY_LONG); _delay_ms(STEPS_DELAY_LONG);
 
 		// ---- Draw bitmap on the screen ----
 		ssd1306_draw_bmp(0,0,128,8, img0_128x64c1);
-		_delay_ms(6000);
+		_delay_ms(STEPS_DELAY_LONG); _delay_ms(STEPS_DELAY_LONG);
 	}
 
 	// Return the mandatory for the "main" function int value. It is "0" for success.
