@@ -1,6 +1,11 @@
 CHANGES
 
 
+2018-05-24 (nb)
+
+Source code reorganizing, reformatting. Removed unused. Some optimizations.
+
+
 2018-05-23 (nb)
 
 Added more comments in the source code.
